manual-dubbo-sidecar/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-sample-consumer
  labels:
    app: dubbo-sample-consumer
spec:
  selector:
    matchLabels:
      app: dubbo-sample-consumer
  replicas: 1
  template:
    metadata:
      annotations:
        "sidecar.istio.io/logLevel": debug
      labels:
        app: dubbo-sample-consumer
        version: v1
    spec:
      containers:
        - name: consumer
          image: 127.0.0.1/consumer:v0.0.1
          imagePullPolicy: Never
