manual-dubbo-sidecar/provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-sample-provider
  labels:
    app: dubbo-sample-provider
spec:
  selector:
    matchLabels:
      app: dubbo-sample-provider
  replicas: 1
  template:
    metadata:
      labels:
        app: dubbo-sample-provider
        version: v1
    spec:
      containers:
        - name: provider
          image: 127.0.0.1/provider:v0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 20880
